SERVER-39672: default to local if no read concern specified for a multi-statment transaction