jstests/noPassthrough/server_transaction_metrics_for_prepared_transactions.js
@@ -69,7 +69,7 @@
     const doc1 = {_id: 1, x: 1};
 
     // Start transaction and prepare transaction.
-    session.startTransaction();
+    session.startTransaction({readConcern: {level: 'snapshot'}});
     assert.commandWorked(sessionColl.insert(doc1));
 
     // Trigger the oldestOpenUnpreparedReadTimestamp to be set.
@@ -118,7 +118,7 @@
     const doc2 = {_id: 2, x: 2};
 
     // Start transaction and prepare transaction.
-    session.startTransaction();
+    session.startTransaction({readConcern: {level: 'snapshot'}});
     assert.commandWorked(sessionColl.insert(doc2));
 
     // Trigger the oldestOpenUnpreparedReadTimestamp to be set.
