src/mongo/db/repl/read_concern_args_test.cpp
@@ -510,6 +510,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, EmptyLevel) {
 
     ASSERT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kLocalReadConcern == readConcern.getOriginalLevel());
 }
 
 TEST(UpconvertReadConcernLevelToSnapshot, LevelLocal) {
@@ -522,6 +523,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, LevelLocal) {
 
     ASSERT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kLocalReadConcern == readConcern.getOriginalLevel());
 }
 
 TEST(UpconvertReadConcernLevelToSnapshot, LevelMajority) {
@@ -535,6 +537,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, LevelMajority) {
 
     ASSERT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kMajorityReadConcern == readConcern.getOriginalLevel());
 }
 
 TEST(UpconvertReadConcernLevelToSnapshot, LevelSnapshot) {
@@ -548,6 +551,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, LevelSnapshot) {
 
     ASSERT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getOriginalLevel());
 }
 
 TEST(UpconvertReadConcernLevelToSnapshot, LevelSnapshotWithAtClusterTime) {
@@ -565,6 +569,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, LevelSnapshotWithAtClusterTime) {
 
     ASSERT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getOriginalLevel());
     ASSERT_TRUE(readConcern.getArgsAtClusterTime());
 }
 
@@ -581,6 +586,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, AfterClusterTime) {
 
     ASSERT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kSnapshotReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kLocalReadConcern == readConcern.getOriginalLevel());
     ASSERT_TRUE(readConcern.getArgsAfterClusterTime());
 }
 
@@ -595,6 +601,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, LevelAvailable) {
 
     ASSERT_NOT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kAvailableReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kAvailableReadConcern == readConcern.getOriginalLevel());
 }
 
 TEST(UpconvertReadConcernLevelToSnapshot, LevelLinearizable) {
@@ -608,6 +615,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, LevelLinearizable) {
 
     ASSERT_NOT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kLinearizableReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kLinearizableReadConcern == readConcern.getOriginalLevel());
 }
 
 TEST(UpconvertReadConcernLevelToSnapshot, AfterOpTime) {
@@ -624,6 +632,7 @@ TEST(UpconvertReadConcernLevelToSnapshot, AfterOpTime) {
 
     ASSERT_NOT_OK(readConcern.upconvertReadConcernLevelToSnapshot());
     ASSERT(ReadConcernLevel::kLocalReadConcern == readConcern.getLevel());
+    ASSERT(ReadConcernLevel::kLocalReadConcern == readConcern.getOriginalLevel());
     ASSERT_TRUE(readConcern.getArgsOpTime());
 }
 
